--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
-name: CI
+name: CD (test)
 
-on: [push]
+on: 
+  push:
+    branches: 
+    - develop
 
 jobs:
-  build:
+  build-and-deploy:
 
     name: Hello-World
     
