--- a/package.json
+++ b/package.json
@@ -17,6 +17,5 @@
     "url": "https://github.com/willzhan/preview/issues"
   },
   "homepage": "https://github.com/willzhan/preview#readme",
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
