--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,6 +25,6 @@ jobs:
       run: |
         npm ci
         npm run build --if-present
-        npm test
+        npm run test --if-present
       env:
         CI: true
