--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Video preview or scrubbing without backend workflow",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-disabled-till-we-add-tests": "echo \"Error: no test specified\" && exit 1",
     "build": "find ./src -maxdepth 1 -iname '*.js' -not -name 'ampPlayer.js' -exec cat {} +> src/static/js/bundle.js && cp src/ampPlayer.js src/static/js/"
   },
   "repository": {
