--- a/PreviewSoln/PreviewWeb/PreviewWeb.csproj
+++ b/PreviewSoln/PreviewWeb/PreviewWeb.csproj
@@ -1,10 +1,24 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <PackageType>Template</PackageType>
+    <PackageVersion>1.0.1</PackageVersion>
+    <PackageId>Video.Preview.Templates</PackageId>
+    <Title>Video Preview Templates</Title>
+    <Authors>Team 49</Authors>
+    <Description>Templates to use when creating a video preview application.</Description>
+    <PackageTags>dotnet-new;templates;video</PackageTags>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <IsPackable>true</IsPackable>
+
+    <IncludeContentInPack>true</IncludeContentInPack>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <ContentTargetFolders>content</ContentTargetFolders>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include=".\**\*" Exclude=".\bin\**;.\obj\**" />  
     <None Include="wwwroot\Preview.html" />
   </ItemGroup>
 
